fixed collapse

--- a/styles/elements/form.scss
+++ b/styles/elements/form.scss
@@ -206,7 +206,6 @@ $border-radius-round-right: 0 $telekom-radius $telekom-radius 0;
 
 .search-input {
   max-width: $container-min-width;
-  margin: 0 auto;
   position: relative;
 
   &::before {
